Upgrade base app image

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,9 +1,12 @@
-FROM python:3.8
+FROM python:3.13.2-alpine3.21
+s
+WORKDIR /app
 
-WORKDIR /app/
+COPY ./requirements.txt ./
 
-COPY . .
+RUN pip install --upgrade pip && \
+    pip install -r requirements.txt
 
-RUN pip install -r requirements.txt
+COPY ./app ./
 
-CMD uvicorn --host=0.0.0.0 main:app
+CMD ["uvicorn", "main:app",  "--host", "0.0.0.0"]
