--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.13.2-alpine3.21
-s
+
 WORKDIR /app
 
 COPY ./requirements.txt ./
@@ -7,6 +7,6 @@ COPY ./requirements.txt ./
 RUN pip install --upgrade pip && \
     pip install -r requirements.txt
 
-COPY ./app ./
+COPY ./ ./
 
 CMD ["uvicorn", "main:app",  "--host", "0.0.0.0"]
