--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -5,6 +5,8 @@ description = "API to manage users data"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiosqlite>=0.21.0",
+    "asyncpg>=0.30.0",
     "email-validator==2.3.0",
     "fastapi==0.116.1",
     "fastcrud>=0.16.0",
@@ -29,3 +31,12 @@ python_version = "3.12"
 strict = true
 exclude = ["monitoring", "assets", "src/.venv"]
 files = "src/"
+
+[tool.ruff]
+target-version = "py312"
+exclude = ["monitoring", "assets", "src/.venv"]
+lint.extend-select = ["ALL"]
+lint.ignore = [
+  "D100",
+  "UP040",
+]
