--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
 [dependency-groups]
 test = [
     "faker>=37.6.0",
+    "httpx>=0.28.1",
     "mypy>=1.17.1",
     "pytest>=8.4.2",
     "ruff>=0.12.12",
@@ -40,3 +41,6 @@ lint.ignore = [
   "D100",
   "UP040",
 ]
+
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["D103", "INP001", "S101"]
