--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - DEBUG=${DEBUG}
-    ports:
-      - 8000:8000
+    volumes:
+      - static_data:/src/.venv/lib/python3.12/site-packages/sqladmin/statics
     depends_on:
       db:
         condition: service_healthy
@@ -60,7 +60,20 @@ services:
       - grafana_data:/var/lib/grafana
       - ./monitoring/grafana:/etc/grafana/provisioning
 
+  nginx:
+    build:
+      context: ./proxy
+    restart: unless-stopped
+    depends_on:
+      app:
+        condition: service_healthy
+    ports:
+      - 80:80
+    volumes:
+      - static_data:/app/statics
+
 volumes:
   grafana_data:
   pg_data:
   prometheus_data:
+  static_data:
