--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aiosqlite>=0.21.0",
+    "asgi-lifespan>=2.1.0",
     "asyncpg>=0.30.0",
     "email-validator==2.3.0",
     "fastapi==0.116.1",
@@ -39,6 +40,7 @@ exclude = ["monitoring", "assets", "src/.venv"]
 lint.extend-select = ["ALL"]
 lint.ignore = [
   "D100",
+  "D104",
   "UP040",
 ]
 
